--- a/src/features/auth/_auth.scss
+++ b/src/features/auth/_auth.scss
@@ -111,5 +111,8 @@
         display: flex ;
         justify-content: space-between;
         gap: 16px;
+        & > div {
+            width: 50%;
+        }
     }
 }
