fixing responsive stuff

--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,11 @@ button:hover,
   align-items: flex-start;
 }
 
+@media (max-width: 767px) {
+  .puzzle-main-layout {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+}
 .puzzle-right-sider {
   border-left: 1px solid rgba(234, 233, 232, 0.1);
 }
@@ -188,6 +193,11 @@ button:hover,
   height: 100vh;
 }
 
+@media (max-width: 767px) {
+  .ant-layout-sider {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+}
 .puzzle-about {
   height: 100%;
   padding: 16px;
@@ -502,6 +512,11 @@ input:-webkit-autofill {
   border-bottom: 1px solid;
 }
 
+@media (max-width: 767px) {
+  .ant-drawer {
+    height: calc(var(--vh, 1vh) * 100 - 80px);
+  }
+}
 .ant-dropdown {
   color: #EAE9E8;
   top: 80px !important;
@@ -693,7 +708,7 @@ input:-webkit-autofill {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .puzzle-auth-layout header button,
 .puzzle-auth-layout .puzzle-auth-desc {
