--- a/src/features/auth/_auth.scss
+++ b/src/features/auth/_auth.scss
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
 
     header button,
     .puzzle-auth-desc {
