--- a/src/assets/styles/components/_drawer.scss
+++ b/src/assets/styles/components/_drawer.scss
@@ -63,3 +63,9 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .ant-drawer {
+        height: calc(calc(var(--vh, 1vh) * 100) - 80px);
+    }
+}
